*refatorando diretorios do projeto